#[[---------------------------------------------------------------------------]
|       o        |
|    o     o     |  HELYX (R) : Open-source CFD for Enterprise
|   o   O   o    |  Version : 4.4.0
|    o     o     |  ENGYS Ltd. <http://engys.com/>
|       o        |
[-----------------------------------------------------------------------------]
License
    This file is part of HELYXcore.
    HELYXcore is based on OpenFOAM (R) <http://www.openfoam.org/>.

    HELYXcore is free software: you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    HELYXcore is distributed in the hope that it will be useful, but WITHOUT
    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.

    You should have received a copy of the GNU General Public License
    along with HELYXcore.  If not, see <http://www.gnu.org/licenses/>.

Copyright
    (c) 2019 Engys Ltd.

[----------------------------------------------------------------------------]]

# Fix issues with FPE for tree vectorisation run in SP on AMD
# Issues in meshing on AMD when using tree vectorize and SP
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND "$ENV{HELYX_PRECISION_OPTION}" MATCHES "SP")
    add_compile_options(-fno-tree-vectorize)
endif()

# Temporarily disable exe compilation
add_subdirectory(executables)

add_subdirectory(meshLibrary)

add_subdirectory(utilities)


